--- a/_posts/2023-11-15-ghw-rocks.md
+++ b/_posts/2023-11-15-ghw-rocks.md
@@ -7,4 +7,4 @@ lead: Global Hack Week
 
 Global Hack is a week-long festivel hosted by Major League Hacking every month.
 
-join at [ghw.mlh.io](https://ghw/mlh.io) today!
+join at [ghw.mlh.io](https://ghw.mlh.io/) today!
