add projects into the pojects section

--- a/_posts/2024-05-25-projects.md
+++ b/_posts/2024-05-25-projects.md
@@ -6,11 +6,34 @@ permalink: /projects/
 
 # My Projects
 
-## [Project 1](http://link-to-project1.com)
-Description of project 1. This project involves...
+### Project #01: JAVA (Blood Management System)
+- **Location:** Karachi, Pakistan
+- **Description:** Developed a web application for blood management, allowing people to search for blood online.
+- **Teamwork:** Coordinated with a team of 2 members.
 
-## [Project 2](http://link-to-project2.com)
-Description of project 2. This project focuses on...
+### Project #02: C++ (Student Report Card System)
+- **Location:** Karachi, Pakistan
+- **Description:** Created an application to store data about fees, student records, search, and display class records.
+- **Leadership:** Led a team of 2 individuals.
 
-## [Project 3](http://link-to-project3.com)
-Description of project 3. This project is about...
+### Project #03: [React JS (E-commerce Website)](https://github.com/qudosabdu/mern-commerce)
+- **Description:** Developed an online shopping website for food products, clothes, books, etc.
+
+### Project #04: [Gallery App](https://gallery-app-seven-ruddy.vercel.app/)
+- **Description:** Developed a gallery app where users can upload images, delete, edit, create playlists, and add favorites. The app was developed using Next.js 14.
+
+### Project #05: [CRUD App with React, Express, and MongoDB](http://link-to-your-crud-app.com)
+- **Description:** Created a CRUD application for managing a collection of items using React for the frontend, Express for the backend, and MongoDB for the database. Implemented features for Create, Read, Update, and Delete operations.
+
+### Project #06: [Movie Web Application with IMDb API](https://movie-box-be-task-2.vercel.app/)
+- **Description:** Developed a movie web application using the IMDb API to fetch and display information about movies. Users can search for movies, view details such as ratings, cast, and synopsis, and explore various genres.
+
+### Project #07: [NetFlix Clone with React.js and Tailwind CSS](https://netflix-clone-qudosk.vercel.app/)
+- **Description:** Developed a clone of the NextFlex website using React.js and Tailwind CSS. The project replicates the design and functionality of the NextFlex platform, allowing users to browse and purchase products, explore categories, and manage their accounts.
+
+### Project #08: [Business Website with Next.js](https://next-level-five.vercel.app/)
+- **Description:** Designed and developed a business website using Next.js, providing a modern and responsive online presence for the company. Implemented features such as dynamic routing, server-side rendering, and optimized performance to enhance user experience and accessibility.
+
+
+
+
